[package]
name = "rush"
version = "0.1.14"
edition = "2021"
license = "Unlicense"
description = "the rust shell"
repository = "https://github.com/parth/rush"

[dependencies]
anyhow = "1.0.81"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3.3"
base64 = "0.22.1"
